@@ -4,7 +4,8 @@ class Pagely {
 
 	static function run() {
 		if ( class_exists( '\PagelyCachePurge' ) ) {
-			\PagelyCachePurge::purgeAll();
+			$purger = new \PagelyCachePurge();
+			$purger->purgeAll();
 		}
 	}
 }
