@@ -3,7 +3,7 @@
 if ( class_exists( 'FLUpdater' ) ) {
 	FLUpdater::add_product(array(
 		'name'      => 'Beaver Builder Plugin (Pro Version)',
-		'version'   => '2.1.5.1',
+		'version'   => '2.1.5.2',
 		'slug'      => 'bb-plugin',
 		'type'      => 'plugin',
 	));
